[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vios"
version = "3.4.0"
authors = [
  { name="YL Feng", email="fengyl@baqis.ac.cn" },
]
description = "runtime requirements for systemq"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "tqdm",
    "rich",
    "lmfit",
    "sympy",
    "loguru",
    "jsonschema",
    "gitpython",
    "dill",
    "inset",
    "apscheduler",
    "networkx",
    "qlispc"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Chinese (Simplified)",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
"homepage" = "https://quarkstudio.readthedocs.io/en/latest"

[tool.setuptools]
packages = ["quark.app", 
            "quark.dag",
            "quark.interface",
            "quark.runtime"]
py-modules = ["quark.proxy"]
# [tool.setuptools.packages.find]
# where = ["."]
# include=["quark"]
# exclude = ["quark.circuit.*"]
