[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vios"
dynamic = ["version"]
authors = [
  { name="YL Feng", email="fengyl@baqis.ac.cn" },
]
description = "QuarkStudio Runtime"
readme = "README.md"
license = "MIT"
license-files = [
    "LICEN[CS]E*"
]
requires-python = ">=3.12"
dependencies = [
    "tqdm",
    "rich",
    "lmfit",
    "sympy",
    "zarr",
    "loguru",
    "jsonschema",
    "gitpython",
    "paramiko",
    "dill",
    "itables",
    "pandas",
    "inset",
    "apscheduler",
    "networkx",
    "prompt_toolkit",
    "openai",
    "qlispc"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: Chinese (Simplified)",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
"homepage" = "https://quarkstudio.readthedocs.io/en/latest"

[tool.setuptools]
packages = ["quark.app", 
            "quark.interface",
            "quark.runtime",
            "quark.sentry"]
py-modules = ["quark.proxy"]
# [tool.setuptools.packages.find]
# where = ["."]
# include=["quark"]
# exclude = ["quark.circuit.*"]

[tool.setuptools.dynamic]
version = {attr = "quark.proxy.__version__"}
